--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: qualityTools
 Type: Package
 Title: Statistical Methods for Quality Science
-Version: 1.31
+Version: 1.31.1
 Date: 12-10-2010
 Author: Thomas Roth
 Maintainer: Thomas Roth <thomas.roth@tu-berlin.de>
@@ -25,6 +25,6 @@ LazyLoad: yes
 Depends: R(>= 2.9.0), graphics, methods
 Imports: graphics
 Suggests: MASS, methods
-Packaged: 2010-12-10 17:10:05 UTC; roth
 Repository: CRAN
-Date/Publication: 2010-12-12 09:11:06
+Date/Publication: 2011-02-18 19:18:22
+Packaged: 2011-02-14 22:47:18 UTC; ripley
