--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: qualityTools
 Type: Package
 Title: Statistical Methods for Quality Science
-Version: 1.3
-Date: 2010-02-01
+Version: 1.31
+Date: 12-10-2010
 Author: Thomas Roth
 Maintainer: Thomas Roth <thomas.roth@tu-berlin.de>
 Description: This is a package for teaching statistical methods in the
@@ -25,6 +25,6 @@ LazyLoad: yes
 Depends: R(>= 2.9.0), graphics, methods
 Imports: graphics
 Suggests: MASS, methods
-Packaged: 2010-11-08 17:09:45 UTC; kaliwe
+Packaged: 2010-12-10 17:10:05 UTC; roth
 Repository: CRAN
-Date/Publication: 2010-11-08 19:41:22
+Date/Publication: 2010-12-12 09:11:06
