--- a/inst/doc/Makefile
+++ b/inst/doc/Makefile
@@ -5,7 +5,8 @@ pdf: 	qualityTools.tex
 	bibtex qualityTools
 	pdflatex qualityTools
 	pdflatex qualityTools
+	pdflatex qualityTools
 
 clean:
 	rm -f *.aux *.eps *.log *.out *.tex *.toc *.bbl
-	rm -f Rplots.ps qualityTools-* 
+	rm -f Rplots.ps qualityTools-*
